--- a/src/app/common/nav/nav.component.scss
+++ b/src/app/common/nav/nav.component.scss
@@ -27,7 +27,7 @@
   // color: #4198e5;
   &:hover {
     text-decoration: underline;
-    color: #4198e5;
+    color: #b1ffd0;
   }
   .anticon {
     font-size: 20px;
@@ -43,7 +43,7 @@
   font-size: 27px;
   margin-right: 5px;
   font-weight: 900;
-  color: blue;
+  color: #0ed60f;
 }
 #loginDiv {
   padding-top: 7px;
