--- a/src/app/fun-tool/fun-tool.component.html
+++ b/src/app/fun-tool/fun-tool.component.html
@@ -2,7 +2,7 @@
   <nz-tabset class="f-tool-tab">
     <nz-tab>
       <ng-template #nzTabHeading>
-        任/申购计算器
+        认/申购计算器
       </ng-template>
       <div>
         <p class="f-tool-title">适用于计算认/申购基金的手续费和成交份额</p>
@@ -14,7 +14,7 @@
                   元
                 </ng-template>
               </nz-input>
-              <div nz-form-explain *ngIf="toolOne.controls.amount.dirty&&toolOne.controls.amount.hasError('required')">Please input your amount!</div>
+              <div nz-form-explain *ngIf="toolOne.controls.amount.dirty&&toolOne.controls.amount.hasError('required')">请填写相应数值</div>
             </div>
           </div>
           <div nz-form-item>
@@ -24,7 +24,7 @@
                   元
                 </ng-template>
               </nz-input>
-              <div nz-form-explain *ngIf="toolOne.controls.netValue.dirty&&toolOne.controls.netValue.hasError('required')">Please input your netValue!</div>
+              <div nz-form-explain *ngIf="toolOne.controls.netValue.dirty&&toolOne.controls.netValue.hasError('required')">请填写相应数值</div>
             </div>
           </div>
           <div nz-form-item>
@@ -34,7 +34,7 @@
                   %
                 </ng-template>
               </nz-input>
-              <div nz-form-explain *ngIf="toolOne.controls.rate.dirty&&toolOne.controls.rate.hasError('required')">Please input your rate!</div>
+              <div nz-form-explain *ngIf="toolOne.controls.rate.dirty&&toolOne.controls.rate.hasError('required')">请填写相应数值</div>
             </div>
           </div>
           <div nz-form-item>
@@ -69,7 +69,7 @@
                 份
               </ng-template>
             </nz-input>
-            <div nz-form-explain *ngIf="toolTwo.controls.portio.dirty&&toolTwo.controls.portio.hasError('required')">Please input your portio!</div>
+            <div nz-form-explain *ngIf="toolTwo.controls.portio.dirty&&toolTwo.controls.portio.hasError('required')">请填写相应数值</div>
           </div>
         </div>
         <div nz-form-item>
@@ -79,7 +79,7 @@
                 元
               </ng-template>
             </nz-input>
-            <div nz-form-explain *ngIf="toolTwo.controls.netValue.dirty&&toolTwo.controls.netValue.hasError('required')">Please input your netValue!</div>
+            <div nz-form-explain *ngIf="toolTwo.controls.netValue.dirty&&toolTwo.controls.netValue.hasError('required')">请填写相应数值</div>
           </div>
         </div>
         <div nz-form-item>
@@ -89,7 +89,7 @@
                 %
               </ng-template>
             </nz-input>
-            <div nz-form-explain *ngIf="toolTwo.controls.rate.dirty&&toolTwo.controls.rate.hasError('required')">Please input your rate!</div>
+            <div nz-form-explain *ngIf="toolTwo.controls.rate.dirty&&toolTwo.controls.rate.hasError('required')">请填写相应数值</div>
           </div>
         </div>
         <div nz-form-item>
@@ -112,7 +112,7 @@
     </nz-tab>
     <nz-tab>
       <ng-template #nzTabHeading>
-        收益购计算器
+        收益率计算器
       </ng-template>
       <p class="f-tool-title">适用于计算基金的收益率</p>
       <form nz-form [formGroup]="toolThree" class="f-tool-form" (ngSubmit)="getThree()">
@@ -123,7 +123,7 @@
                 份
               </ng-template>
             </nz-input>
-            <div nz-form-explain *ngIf="toolThree.controls.investment.dirty&&toolThree.controls.investment.hasError('required')">Please input your investment!</div>
+            <div nz-form-explain *ngIf="toolThree.controls.investment.dirty&&toolThree.controls.investment.hasError('required')">请填写相应数值</div>
           </div>
         </div>
         <div nz-form-item>
@@ -133,7 +133,7 @@
                 元
               </ng-template>
             </nz-input>
-            <div nz-form-explain *ngIf="toolThree.controls.income.dirty&&toolThree.controls.income.hasError('required')">Please input your income!</div>
+            <div nz-form-explain *ngIf="toolThree.controls.income.dirty&&toolThree.controls.income.hasError('required')">请填写相应数值</div>
           </div>
         </div>
         <div nz-form-item>
@@ -143,7 +143,7 @@
                 %
               </ng-template>
             </nz-input>
-            <div nz-form-explain *ngIf="toolThree.controls.deadline.dirty&&toolThree.controls.deadline.hasError('required')">Please input your deadline!</div>
+            <div nz-form-explain *ngIf="toolThree.controls.deadline.dirty&&toolThree.controls.deadline.hasError('required')">请填写相应数值</div>
           </div>
         </div>
         <div nz-form-item>
