--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -7,7 +7,7 @@
 <div class="f-odd">
     <div class="f-odd-info">
       <p>精挑细选的优质基金</p>
-      <p>精挑细选的优质基金精挑细选的优质基金精挑细选的优质基金精挑细选的优质基金</p>
+      <p>PPP模式下绿色产业公募FOF基金，为你而生</p>
     </div>
     <div [style.padding]="'0 100px'">
       <fcard [fCardList]="fCardListRecommendation"></fcard>
@@ -20,7 +20,7 @@
 <div class="f-even">
   <div class="f-even-info">
     <p>前所未有的优质服务</p>
-    <p>前所未有的优质服务前所未有的优质服务前所未有的优质服务前所未有的优质服务</p>
+    <p>客户至上，用心服务每一位投资者</p>
   </div>
   <div class="f-home-cont">
 
@@ -30,7 +30,7 @@
 <div class="f-odd">
   <div class="f-odd-info">
     <p>条理清晰的投资流程</p>
-    <p>条理清晰的投资流程条理清晰的投资流程条理清晰的投资流程条理清晰的投资流程</p>
+    <p>清晰流程，为您开启财富大门</p>
   </div>
   <div class="f-home-cont" style="margin: 0 100px;">
     <nz-steps nzCurrent="5">
@@ -66,7 +66,6 @@
 <div class="f-even">
   <div class="f-even-info">
     <p>携手共赢，与全球合作伙伴共建优质基金</p>
-    <p>前所未有的优质服务前所未有的优质服务前所未有的优质服务前所未有的优质服务</p>
   </div>
   <div class="f-home-cont f-home-cont-flex" style="margin: 0 119px;">
     <div class="f-home-cont-flex-pic">
