--- a/src/app/common/nav/nav.component.scss
+++ b/src/app/common/nav/nav.component.scss
@@ -3,7 +3,7 @@
   height: 31px;
   background: transparent;
   border-radius: 6px;
-  /* margin: 16px 24px 16px 0; */
+  /*margin: 16px 24px 16px 24px;*/
   float: left;
 }
 .ant-layout-header {
