--- a/src/app/host/host.component.scss
+++ b/src/app/host/host.component.scss
@@ -54,6 +54,7 @@ thead{
   border: 0.5px solid #ececec;
   text-align: center;
   padding: 13px 0;
+  min-width: 250px
 }
 .subParts h2{
   font-weight: 700;
